Bugfix cta buttons were cut off on home

--- a/components/Hero.scss
+++ b/components/Hero.scss
@@ -76,7 +76,7 @@
   &__inner {
     display: block;
     padding-top: 30px;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
   }
 
   &__title-wrapper {
